force-app/main/default/objects/Contact_Sync_DLQ__c/Contact_Sync_DLQ__c.object-meta.xml
<CustomObject>
    <description>Poison-pill Contact Sync events after bounded retries on publish or subscribe.</description>
    <label>Contact Sync DLQ</label>
    <nameField>
        <displayFormat>DLQ-{00000000}</displayFormat>
        <label>DLQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Sync DLQ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>