force-app/main/default/objects/Contact_Sync_DLQ__c/fields/Event_Uuid__c.field-meta.xml
<CustomField>
    <fullName>Event_Uuid__c</fullName>
    <externalId>true</externalId>
    <label>Event UUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>