force-app/main/default/objects/Contact_Sync_DLQ__c/fields/Replay_Id__c.field-meta.xml
<CustomField>
    <fullName>Replay_Id__c</fullName>
    <label>Replay Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>