force-app/main/default/objects/Contact_Sync_DLQ__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Publish</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Subscribe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>