force-app/main/default/objects/Contact_Sync_DLQ__c/fields/Subscriber_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Name__c</fullName>
    <label>Subscriber Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>